# opencode-log

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  UPGRADE_GUIDE.md  pyproject.toml
.github/workflows/: release.yml
opencode_log/: cache.py  cli.py  markdown.py  models.py  normalizer.py  render.py  storage.py
opencode_log/templates/: combined.html  index.html  transcript.html
opencode_log/templates/components/: base_styles.css  message_styles.css
tests/: test_cache_roundtrip.py  test_cli_formats.py  test_markdown_render.py  test_storage_and_normalizer.py
